--- a/Tic-Tac-Toe/tic-tac.html
+++ b/Tic-Tac-Toe/tic-tac.html
@@ -5,19 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="tic-tac.css">
+    <script src="tic-tac.js" defer></script>
 </head>
 <body>
 
     <div class="game-box">
-        <div class="kachel" id="kachel1"></div>
-        <div class="kachel" id="kachel2"></div>
-        <div class="kachel" id="kachel3"></div>
-        <div class="kachel" id="kachel4"></div>
-        <div class="kachel" id="kachel5"></div>
-        <div class="kachel" id="kachel6"></div>
-        <div class="kachel" id="kachel7"></div>
-        <div class="kachel" id="kachel8"></div>
-        <div class="kachel" id="kachel9"></div>
+        <div class="kachel" id="kachel1">
+            <img class="changing" id="x1" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o1" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel2">
+            <img class="changing" id="x2" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o2" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel3">
+            <img class="changing" id="x3" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o3" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel4">
+            <img class="changing" id="x4" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o4" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel5">
+            <img class="changing" id="x5" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o5" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel6">
+            <img class="changing" id="x6" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o6" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel7">
+            <img class="changing" id="x7" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o7" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel8">
+            <img class="changing" id="x8" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o8" src="images/letter-o25.png">
+        </div>
+        <div class="kachel" id="kachel9">
+            <img class="changing" id="x9" src="images/525px-Black_x.svg.png">
+            <img class="changing" id="o9" src="images/letter-o25.png">
+        </div>
+        <div>
+        <h2>Player 1</h2>
+        <img class="x-button" src="images/Ps3_button_x_by_thedevingreat-d5g6c9k (1).png">
+        <img class="o-button" src="images/Ps3_button_o_by_thedevingreat-d5g6d2x (1).png">
+        </div>
+        <img id="restart" src="images/Restart-PNG-File (1).png">
+        <div>
+        <h2>Player 2</h2>
+        <img class="x-button2" src="images/Ps3_button_x_by_thedevingreat-d5g6c9k (1).png">
+        <img class="o-button2" src="images/Ps3_button_o_by_thedevingreat-d5g6d2x (1).png">
+        </div>
     </div>
 
 </body>
