starter wechsel möglich, verbesserter restart

--- a/Tic-Tac-Toe/tic-tac.html
+++ b/Tic-Tac-Toe/tic-tac.html
@@ -47,15 +47,11 @@
             <img class="changing" id="o9" src="images/letter-o25.png">
         </div>
         <div>
-        <h2>Player 1 <h2 id="1x">= X</h2><h2 id="1o" class="hidden">= O</h2></h2>
-        <img class="x-button" src="images/Ps3_button_x_by_thedevingreat-d5g6c9k (1).png">
-        <img class="o-button" src="images/Ps3_button_o_by_thedevingreat-d5g6d2x (1).png">
+        <h2 id="player1">Player 1 <h2 id="1x">= X</h2></h2>
         </div>
         <img id="restart" height="160px" width="160px" src="images/img_440194 (1).png">
         <div>
-        <h2>Player 2 <h2 id="2x" class="hidden">= X</h2><h2 id="2o">= O</h2></h2>
-        <img class="x-button2" src="images/Ps3_button_x_by_thedevingreat-d5g6c9k (1).png">
-        <img class="o-button2" src="images/Ps3_button_o_by_thedevingreat-d5g6d2x (1).png">
+        <h2 id="player2">Player 2 <h2 id="2o">= O</h2></h2>
         </div>
     </div>
 
