--- a/Tic-Tac-Toe/tic-tac.html
+++ b/Tic-Tac-Toe/tic-tac.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+    <p id=win-counter-p1>Player 1 Score: <span id="score1">0</span></p>
+    <br>
+    <p id="win-counter-p2">Player 2 Score: <span id="score2">0</span></p>
+    <br>
+
     <div class="game-box">
         <div class="kachel" id="kachel1">
             <img class="changing" id="x1" src="images/525px-Black_x.svg.png">
@@ -49,7 +54,7 @@
         <div>
         <h2 id="player1">Player 1 <h2 id="1x">= X</h2></h2>
         </div>
-        <img id="restart" height="160px" width="160px" src="images/img_440194 (1).png">
+        <img id="restart" height="120px" width="120px" src="images/img_440194 (1).png">
         <div>
         <h2 id="player2">Player 2 <h2 id="2o">= O</h2></h2>
         </div>
