--- a/Tic-Tac-Toe/tic-tac.html
+++ b/Tic-Tac-Toe/tic-tac.html
@@ -14,42 +14,44 @@
     <p id="win-counter-p2">Player 2 &nbsp; &nbsp; &nbsp; Score: <span id="score2">0</span></p>
     <br>
 
+    <h1 id="nextOne">Next Game</h1>
+
     <div class="game-box">
         <div class="kachel" id="kachel1">
             <img class="changing" id="x1" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o1" src="images/letter-o25.png">
+            <img class="changing" id="o1" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel2">
             <img class="changing" id="x2" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o2" src="images/letter-o25.png">
+            <img class="changing" id="o2" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel3">
             <img class="changing" id="x3" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o3" src="images/letter-o25.png">
+            <img class="changing" id="o3" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel4">
             <img class="changing" id="x4" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o4" src="images/letter-o25.png">
+            <img class="changing" id="o4" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel5">
             <img class="changing" id="x5" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o5" src="images/letter-o25.png">
+            <img class="changing" id="o5" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel6">
             <img class="changing" id="x6" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o6" src="images/letter-o25.png">
+            <img class="changing" id="o6" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel7">
             <img class="changing" id="x7" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o7" src="images/letter-o25.png">
+            <img class="changing" id="o7" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel8">
             <img class="changing" id="x8" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o8" src="images/letter-o25.png">
+            <img class="changing" id="o8" src="images/circle-png--1425.png">
         </div>
         <div class="kachel" id="kachel9">
             <img class="changing" id="x9" src="images/525px-Black_x.svg.png">
-            <img class="changing" id="o9" src="images/letter-o25.png">
+            <img class="changing" id="o9" src="images/circle-png--1425.png">
         </div>
         <div>
              <h2 id="player1">Player 1 <h2 id="1x">= X</h2></h2>
