--- a/Tic-Tac-Toe/tic-tac.html
+++ b/Tic-Tac-Toe/tic-tac.html
@@ -6,6 +6,9 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="tic-tac.css">
     <script src="tic-tac.js" defer></script>
+    <audio id="beat">
+        <source src="audio/Aerotrancer - Cosmos (Synthwave Rework) (1).mp3" type="audio/mp3" loop autoplay>
+    </audio>
 </head>
 <body>
 
@@ -15,6 +18,7 @@
     <br>
 
     <h1 id="nextOne">Next Game</h1>
+    <img id="sound-off" src="images/sound-off-icon.png">
 
     <div class="game-box">
         <div class="kachel" id="kachel1">
@@ -56,7 +60,7 @@
         <div>
              <h2 id="player1">Player 1 <h2 id="1x">= X</h2></h2>
         </div>
-        <img id="restart" height="120px" width="120px" src="images/img_440194 (1).png">
+        <img id="restart" height="120px" width="120px" src="images/icons8-restart-96.png">
         <div>
              <h2 id="player2">Player 2 <h2 id="2o">= O</h2></h2>
         </div>
